--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calconic Calculator</title>
+    <title>Infusion Rechner</title>
 </head>
 <body>
     <div class="calconic-calculator" data-calculatorid="668cf54248abfd002ac73870"></div>
