--- a/infusionhtml/index_save.html
+++ b/infusionhtml/index_save.html
@@ -6,15 +6,7 @@
     <title>Simple Score Calculator</title>
     <style>
         body { font-family: Arial, sans-serif; }
-        .container { 
-            max-width: 1024px; 
-            margin: 50px auto; 
-            padding: 20px; 
-            border: 1px solid #ccc; 
-            border-radius: 5px; 
-            width: 100%; 
-            box-sizing: border-box;
-        }
+        .container { max-width: 300px; margin: 50px auto; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
         .input-group { margin-bottom: 10px; }
         .input-group label { display: block; margin-bottom: 5px; }
         .input-group input { width: 100%; padding: 8px; }
