--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to my GitHub Page</h1>
-    <p>This is a basic GitHub Pages site.</p>
-    <div class="calconic-calculator"  data-calculatorid="668cf54248abfd002ac73870"></div>
-    <script>
-          (function() { var qs,j,q,s,d=document, gi=d.getElementById,
-  ce=d.createElement, gt=d.getElementsByTagName,
-  id="calconic_", b="https://cdn.calconic.com/static/js/";
-  if(!gi.call(d,id)) { j=ce.call(d,"script"); j.id=id; j.type="text/javascript"; j.async=true;
-  j.dataset.calconic=true;
-  j.src=b+"calconic.min.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(j,q) }
-})();
-        </script>
+    <div class="container">
+        <div class="content">
+            <h1>Welcome</h1>
+            <p>Select a subdomain to visit:</p>
+            <a href="http://www.paed.eu/infusion" class="subdomain-link">Infusion</a>
+        </div>
+    </div>
 </body>
 </html>
 
