--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Welcome</h1>
-            <p>Select a subdomain to visit:</p>
-            <a href="http://www.paed.eu/infusion" class="subdomain-link">Infusion</a>
+            <h1>Willkommen</h1>
+            <p></p>
+            <a href="http://www.paed.eu/infusion" class="subdomain-link">Infusionsrechner</a>
         </div>
     </div>
 </body>
