--- a/infusionhtml/index.html
+++ b/infusionhtml/index.html
@@ -96,8 +96,8 @@
             font-weight: bold;
         }
         .result-faded {
-            background: rgba(230, 242, 241, 0.6);
-            color: #aaaaaa;
+            background: rgba(230, 242, 241, 0.3);
+            color: rgba(0, 0, 0, 0.3);
         }
         .info {
             text-align: center;
@@ -182,17 +182,17 @@
         <span class="value" id="potassiumPerBagValue">5.8</span> ml
     </div>
 
-    <div class="result" id="adjustedFlowRate">
+    <div class="result result-faded" id="adjustedFlowRate">
         <span class="label">Angepasste Laufgeschwindigkeit nach Elektrolytzusatz</span>
         <span class="value" id="adjustedFlowRateValue">93.1</span> ml/h
     </div>
 
-    <div class="result" id="adjustedTotalVolume">
+    <div class="result result-faded" id="adjustedTotalVolume">
         <span class="label">Angepasstes Gesamtvolumen nach Elektrolytzusatz</span>
         <span class="value" id="adjustedTotalVolumeValue">2235.0</span> ml
     </div>
 
-    <div class="result" id="bagsPerDay">
+    <div class="result result-faded" id="bagsPerDay">
         <span class="label">Beutel pro 24h</span>
         <span class="value" id="bagsPerDayValue">4.32</span>
     </div>
