--- a/exploring.html
+++ b/exploring.html
@@ -15,6 +15,13 @@
                 <div class="section active">
                     <h2>Exploring</h2>
                     <p>Entdecken Sie weitere pädiatrische Ressourcen und Tools.</p>
+                    
+                    <div class="navigation-cards">
+                        <a href="map.html" class="nav-card">
+                            <h3>Klinik-Karte</h3>
+                            <p>Interaktive Karte aller deutschen Kinderkliniken</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
