--- a/rechner.html
+++ b/rechner.html
@@ -14,7 +14,7 @@
             <div class="content">
                 <div class="tools-section">
                     <a href="infusion.html" class="tool-link">
-                        <h3>Infusionsrechner</h3>
+                        <h3>MCAD - Infusionsrechner</h3>
                         <p>Infusionsrechner nach internem Standard des Dr. von Haunerschen Kinderspitals für Kinder mit Stoffwechselerkrankungen</p>
                     </a>
                 </div>
