--- a/map.html
+++ b/map.html
@@ -15,15 +15,16 @@
         }
         
         .map-wrapper {
-            position: relative;
+            position: center;
             width: 100%;
             height: 70vh;
             min-height: 500px;
+            max-width: 1024px;
             border: 1px solid #ccc;
             border-radius: 8px;
             overflow: hidden;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+        }   
         
         .map-content {
             width: 100%;
